--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "start": "nodejs ./bin/www"
   },
   "dependencies": {
-    "express": "~4.0.0",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
+    "body-parser": "^1.0.2",
     "cookie-parser": "~1.0.1",
-    "body-parser": "~1.0.0",
+    "cors": "^2.8.4",
     "debug": "~0.7.4",
-    "jade": "~1.3.0"
+    "express": "^4.0.0",
+    "jade": "~1.3.0",
+    "jsonwebtoken": "^8.0.1",
+    "md5": "^2.2.1",
+    "mongoose": "^4.12.1",
+    "morgan": "~1.0.0",
+    "static-favicon": "~1.0.0"
   }
 }
